[gd_scene load_steps=7 format=3 uid="uid://b5oltecp4ay0e"]

[ext_resource type="Script" uid="uid://bik03dufeuox0" path="res://scenes/game/game_over_overlay.gd" id="1_umtxi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_OverlayPanel"]
bg_color = Color(1, 1, 1, 0.94)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24
shadow_color = Color(0, 0, 0, 0.16)
shadow_size = 22

[sub_resource type="LabelSettings" id="LabelSettings_Title"]
font_size = 64
font_color = Color(0.0941177, 0.105882, 0.121568, 1)

[sub_resource type="LabelSettings" id="LabelSettings_Subtitle"]
font_size = 36
font_color = Color(0.133333, 0.145098, 0.160784, 1)

[sub_resource type="LabelSettings" id="LabelSettings_RunInfo"]
font_size = 28
font_color = Color(0.2, 0.215686, 0.239216, 1)

[node name="GameOverOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
z_index = 200
script = ExtResource("1_umtxi")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
color = Color(0, 0, 0, 0.25)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -240.0
offset_right = 360.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_OverlayPanel")

[node name="Margin" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 48

[node name="Layout" type="VBoxContainer" parent="Panel/Margin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
theme_override_constants/separation = 32

[node name="GameOverLabel" type="Label" parent="Panel/Margin/Layout"]
layout_mode = 2
size_flags_horizontal = 3
text = "Game Over"
label_settings = SubResource("LabelSettings_Title")
horizontal_alignment = 1
autowrap_mode = 1

[node name="ScoreLabel" type="Label" parent="Panel/Margin/Layout"]
layout_mode = 2
size_flags_horizontal = 3
text = "Score: 0"
label_settings = SubResource("LabelSettings_Subtitle")
horizontal_alignment = 1

[node name="RunInfoLabel" type="Label" parent="Panel/Margin/Layout"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
autowrap_mode = 1
text = ""
label_settings = SubResource("LabelSettings_RunInfo")
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="Panel/Margin/Layout"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 1
theme_override_constants/separation = 24

[node name="PlayAgainButton" type="Button" parent="Panel/Margin/Layout/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 120)
text = "Play Again"

[node name="MainMenuButton" type="Button" parent="Panel/Margin/Layout/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 120)
text = "Main Menu"
